--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 </head>
 
 <body>
+<div id="content">
+
 <header>
 <div id="title">
 <div>
 <h1>Quantum Huddle Seminar Series</h1>
-<h2>that happen to be on the web</h2>
+<h2>that happens to be on the web</h2>
 </div>
 <div>
 <img src="qh_logo.svg">
 </div>
 </div>
 </header>
-<div id="seminarlinks">
+
+<div id="seminarlinks" class="row">
     <div class="square" id="signup">
         <span></span>
         <span></span>
@@ -60,6 +63,33 @@
             <a href="#" target="_blank">Full List</a>
         </div>
     </div>
+</div>
+
+<div id="upcoming">
+</div>
+
+<div id="organizers">
+<h2>Organizers</h2>
+<p>
+Chitro Chakarborty is a postdoc at Harvard who has found a real job that pays real money! 👏
+</p>
+<p>
+Derek Wang is a PhD student at Harvard who’s interested in quantum optics and quantum chemistry.
+</p>
+<p>
+Kade Head-Marsden is a postdoc at Harvard who chemistries, runs, and climbs fast. 
+</p>
+<p>
+Stefan Krastanov is a postdoc at MIT and Harvard. He likes quantum control and ice cream (details on favorite flavors forthcoming).
+</p>
+<p>
+Tomas Neuman is a physics postdoc at Harvard who would rather be flying.
+</p>
+</div>
+
+<div id="funding">
+</div>
+
 </div>
 </body>
 
