Updated description of QH
I copied the paragraph describing QH from our Google doc.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div id="why">
 <h2>The Seminar</h2>
 <p>
-The point of the quantum huddle is so and so...
+We aim to bring scientists together from fields that are seemingly unrelated but are dedicated to the goals of controlling and exploiting quantum systems. We hope to establish contact between these fields and spark a discussion about topics that we know from our respective perspectives but now introduced in an interdisciplinary light.
 </p>
 </div>
 
@@ -130,13 +130,13 @@ Kade Head-Marsden is a postdoc at Harvard who chemistries, runs, and climbs fast
 Stefan Krastanov is a postdoc at MIT and Harvard. He likes quantum control and ice cream (details on favorite flavors forthcoming).
 </p>
 <p>
-Tomas Neuman is a physics postdoc at Harvard who would rather be flying.
+Tomas Neuman is a physics postdoc at Harvard who would like to be flying.
 </p>
 </div>
 
 <div id="funding">
 <h2>Sponsors</h2>
-funded by so and so...
+Quantum Huddle is supported by ...
 </div>
 
 </div>
