Hide empty sponsors.

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@ Tomas Neuman is a physics postdoc at Harvard who would like to be flying.
 </p>
 </div>
 
-<div id="funding">
+<!--<div id="funding">
 <h2>Sponsors</h2>
 Quantum Huddle is supported by ...
-</div>
+</div>-->
 
 </div>
 </body>
