Add personal links.

--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@ upcoming.appendChild(e);
 <div id="organizers">
 <h2>Organizers</h2>
 <p>
-Chitro Chakarborty is a postdoc at Harvard who has found a real job that pays real money! 👏
+<a href="https://narang.seas.harvard.edu/people/chitro">Chitro Chakarborty</a> is a postdoc at Harvard who has found a real job that pays real money! 👏
 </p>
 <p>
-Derek Wang is a PhD student at Harvard who’s interested in quantum optics and quantum chemistry.
+<a href="https://narang.seas.harvard.edu/people/derek-wang-0">Derek Wang</a> is a PhD student at Harvard who’s interested in quantum optics and quantum chemistry.
 </p>
 <p>
-Kade Head-Marsden is a postdoc at Harvard who chemistries, runs, and climbs fast. 
+<a href="https://narang.seas.harvard.edu/node/1472271">Kade Head-Marsden</a> is a postdoc at Harvard who chemistries, runs, and climbs fast. 
 </p>
 <p>
-Stefan Krastanov is a postdoc at MIT and Harvard. He likes quantum control and ice cream (details on favorite flavors forthcoming).
+<a href="https://narang.seas.harvard.edu/people/stefan-krastanov">Stefan Krastanov</a> is a postdoc at MIT and Harvard. He likes quantum control and ice cream (details on favorite flavors forthcoming).
 </p>
 <p>
-Tomas Neuman is a physics postdoc at Harvard who would like to be flying.
+<a href="https://narang.seas.harvard.edu/people/tomas-neuman">Tomáš Neuman</a> is a physics postdoc at Harvard who would like to be flying.
 </p>
 </div>
 
